hypr_backend/stage_kubernetes/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: _APP_NAME
  name: _APP_NAME
  namespace: _NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: _APP_NAME
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: _APP_NAME
      annotations:
        log.config.scalyr.com/include: "true"
        log.config.scalyr.com/istio-proxy.exclude: "true"
    spec:
      containers:
      - image: gcr.io/_PROJECT_ID/_APP_NAME:BUILD_ID
        command: ["bash", "-c", "db-migrate up --config config/database.json && node app.js"]
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 2
          httpGet:
            httpHeaders:
            - name: Custom-Header
              value: Awesome
            path: /
            port: _APP_PORT
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 60
        readinessProbe:
          failureThreshold: 1
          httpGet:
            httpHeaders:
            - name: Custom-Header
              value: Awesome
            path: /
            port: _APP_PORT
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 2
          timeoutSeconds: 60
        name: _APP_NAME
        ports:
        - containerPort: _APP_PORT
          protocol: TCP
        resources: {}
      nodeSelector:
        node-name: hypr-stage

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: _APP_NAME
  name: _APP_NAME
  namespace: _NAMESPACE
spec:
  ports:
  - port: _APP_PORT
    protocol: TCP
    targetPort: _APP_PORT
    name: _PROTOCOL_HTTP
  selector:
    app: _APP_NAME
  type: ClusterIP
