hypr_backend/stage_kubernetes/vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: hypr-live-be
  namespace: live
spec:
  hosts:
    - api.hypr.pk
  gateways:
    - istio-autogenerated-k8s-ingress.istio-system
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: hypr-live-be
            port:
              number: 8090
